--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: lldpad
 Priority: extra
-Maintainer: Debian FCoE Packaging <pkg-fcoe-general@lists.alioth.debian.org>
-Uploaders: Liang Guo <bluestonechina@gmail.com>
+Maintainer: Debian FCoE Packaging <pkg-fcoe-maintainers@lists.alioth.debian.org>
+Uploaders: Ritesh Raj Sarraf <rrs@debian.org
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, pkg-config, libconfig8-dev
 Standards-Version: 3.9.1
 Section: net
