--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Uploaders: Ritesh Raj Sarraf <rrs@debian.org>, Liang Guo <bluestonechina@gmail.c
 Build-Depends: debhelper (>= 7.0.50~), 
  autotools-dev, 
  pkg-config,
- libconfig8-dev (>= 1.3.2~),
+ libconfig-dev (>= 1.3.2~),
  libnl-dev (>= 1.1),
  flex,
  dh-autoreconf
