--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,9 @@ Build-Depends: debhelper (>= 7.0.50~),
  libconfig-dev (>= 1.3.2~),
  libnl-dev (>= 1.1),
  flex,
- dh-autoreconf
-Standards-Version: 3.9.2
+ dh-autoreconf,
+ libreadline-dev,
+Standards-Version: 3.9.3
 Section: net
 Homepage: http://open-lldp.org/
 Vcs-Git: git://git.debian.org/pkg-fcoe/lldpad.git
