--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  flex,
  dh-autoreconf,
  libreadline-dev,
+ dpkg-dev (>= 1.16.1~)
 Standards-Version: 3.9.3
 Section: net
 Homepage: http://open-lldp.org/
