Drop build dependency on libnl-dev and add libnl-3-dev to build-dep

--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  autotools-dev, 
  pkg-config,
  libconfig-dev (>= 1.3.2~),
- libnl-dev (>= 1.1),
+ libnl-3-dev,
  flex,
  dh-autoreconf,
  libreadline-dev,
