--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  autotools-dev, 
  pkg-config,
  libconfig-dev (>= 1.3.2~),
- libnl-3-dev,
+ libnl-dev (>= 1.1),
  flex,
  dh-autoreconf,
  libreadline-dev,
