--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 7),
  dpkg-dev (>= 1.16.1~)
 Standards-Version: 3.9.6
 Section: net
-Homepage: http://lldpad.org/
+Homepage: http://open-lldp.org/
 Vcs-Git: git://anonscm.debian.org/pkg-fcoe/lldpad.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-fcoe/lldpad.git;a=summary
 
