--- a/debian/rules
+++ b/debian/rules
@@ -18,3 +18,6 @@ override_dh_autoreconf:
 override_dh_auto_clean:
 	dh_auto_clean
 	-rm parse_cli.c
+
+override_dh_installinit:
+	dh_installinit --no-start
