--- a/debian/rules
+++ b/debian/rules
@@ -17,3 +17,6 @@ override_dh_auto_clean:
 
 override_dh_installinit:
 	dh_installinit --no-start
+
+override_dh_missing:
+	dh_missing --fail-missing
