--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ override_dh_auto_clean:
 	-rm parse_cli.c
 
 override_dh_installinit:
-	dh_installinit --no-start
+	dh_installinit -plldpad --only-scripts
 
 override_dh_missing:
 	dh_missing --fail-missing
